# VeloraMobilityOptimizer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FLUTTER_APP_PROMPT.md  INTEGRATION_COMPLETE.md  README.md  Todo  addthistoreport.tex  algocontext.txt  build.sh  check_headers.py  project_tree.txt  render.yaml  report.tex  report_backup.tex  report_backup_v1.tex  start-server.bat  start-server.ps1  start-webapp.sh  test_current.json  test_final.json  test_fixed.json  test_tc02.json  velora.py  verify_output.json  verify_tc01.json  verify_tc01_new.json  verify_tc01_seed.json
.cache/clangd/index/: json.hpp.EE8E353F2251A8E9.idx  main.cpp.DB17CEC8602DF094.idx  map_distance.cpp.52970B1C758BBCF7.idx  map_distance.hpp.86E80AF5234034C1.idx
.github/workflows/: deploy.yml
Research Papers/: Project Summary.docx
TestCase_TC01,TestCase_TC02,TestCase_TC03/: TestCase_TC01.csv  TestCase_TC02.csv  TestCase_TC03.csv  TestCase_TC04.csv
Velora Kriti_2026 TCs/: TestCase_TC01.xlsx  TestCase_TC02.xlsx  TestCase_TC03.xlsx  TestCase_TC04.xlsx  TestCase_TC05.xlsx
Whatsapp SSs/: WhatsApp Image 2026-01-19 at 20.49_0.txt  WhatsApp Image 2026-01-19 at 20.50_2.txt  WhatsApp Image 2026-01-19 at 20.51_1.txt  WhatsApp Image 2026-01-20 at 12.09_3.txt  WhatsApp Image 2026-01-20 at 12.09_4.txt
backend/: .env.example  .gitignore  CMakeLists.txt  backend-README.md  package-lock.json  package.json  server.js
backend/middleware/: upload.js
backend/routes/: optimize.js
backend/services/: parser.js  solver.js
backend/src/: app.js
backend/src/controllers/: optimizationController.js
backend/src/middleware/: upload.js
backend/src/routes/: optimization.js
backend/src/services/: excelParser.js  jobQueue.js  solver.js
backend/src/utils/: processRunner.js
data/: tc01_report.txt  tc02_report.txt  tc03_report.txt  tc04_report.txt  tc05_report.txt
data/json/: output_tc01.json  output_tc02.json  output_tc03.json  output_tc04.json  output_tc05.json  sample_input.json  sample_output.json  tc01_convergence.csv  tc01_input.json  tc01_output.json  tc02_convergence.csv  tc02_input.json  tc02_output.json  tc03_convergence.csv  tc03_input.json  tc03_output.json  tc04_convergence.csv  tc04_input.json  tc04_output.json  tc05_convergence.csv  tc05_input.json  tc05_output.json  test_output.json
deploy/: deploy.sh  nginx.conf  setup-server.sh  velora-backend.service  velorabackend-kri-2651-ti.service
docs/: Final_Report.md  algorithm_design.md  architecture.md
env/: .env
frontend/: .env.production  CMakeLists.txt  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend - Copy/: AGENTS.md  START_FRONTEND.bat  index.html  package-lock.json  package.json  start.ps1  test-excel.html
frontend - Copy/src/: App.jsx  DESIGN_UPDATES.md  QUICK_START.md  README_DESIGN.md  VISUAL_CHANGES.md  api.js  excelParser.js  homePageStyles.css  resultsSection.css  styles.css  styles.css.backup
frontend - Copy/src/.orchids/: orchids.json
frontend - Copy/src/components/: CostComparison.jsx  EmployeeResults.jsx  FileUpload.jsx  Header.jsx  HomePage.jsx  InputPreview.jsx  MetricsCards.jsx  OptimizationMetrics.jsx  ResultsPanel.jsx  ResultsSection.jsx  RouteMap.jsx  RoutesTable.jsx  StatusPanel.jsx
frontend/src/: App.jsx  api.js  homePageStyles.css  index.css  resultsSection.css  styles.css
frontend/src/components/: AddEmployeeModal.jsx  AddVehicleModal.jsx  CostComparison.jsx  DistanceModeForm.jsx  EmployeeResults.jsx  FileUpload.jsx  Header.jsx  HomePage.jsx  InputPreview.jsx  MetricsCards.jsx  OptimizationMetrics.jsx  PenaltyForm.jsx  RerunConfirmDialog.jsx  ResultsPanel.jsx  ResultsSection.jsx  RouteMap.jsx  RoutesTable.jsx  SolverTimeForm.jsx  StatusPanel.jsx  Toast.jsx
frontend/src/components/map/: LocationMarkers.jsx  MapContainer.jsx  MapLegend.jsx  RoutePolylines.jsx
frontend/src/components/results/: EmployeeTable.jsx  ResultsSummary.jsx  RouteDetails.jsx
frontend/src/components/upload/: FileUploader.jsx  TestCaseSelector.jsx
frontend/src/context/: OptimizationContext.jsx
frontend/src/hooks/: useOptimization.js
frontend/src/pages/: OptimizationPage.jsx
frontend/src/services/: api.js
frontend/src/utils/: downloadUtils.js
parser/: excel_to_json.py
pdf24_convertPdfTo/: A Survey on the Vehicle Routing Problem and Its Variants.txt  Algos for VRPTW Classic solomons.txt  HVRPTW Case Study.txt  Heterogeneous Vehicle Routing Problem with Soft Time Windows.txt  Literature Review of VRPTW.txt  MultiTrip HVRPTW.txt  Opti PS.txt  PyVRP- a high-performance VRP solver package C++.txt  VRPTW Part I.txt
scripts/: commands.sh  generate_tc05.py  json_to_report.py  plot_convergence.py  run_pipeline.sh  run_test.sh  test_runner.py  view_all_results.sh
solver/: CMakeLists.txt
solver/include/: map_distance.hpp
solver/src/: main.cpp  map_distance.cpp
solver/src/constraints/: CMakeLists.txt
solver/src/cost/: CMakeLists.txt
solver/src/heuristics/: CMakeLists.txt
solver/src/metaheuristics/: CMakeLists.txt
solver/src/utils/: CMakeLists.txt
testing/: README.md  benchmark.py  test_deployment.py
testing_benchmarking/: benchmark.py  test_deployment.py
testing_benchmarking/results/: .gitkeep  benchmark_20260201_114338.json  benchmark_20260201_114338_employees.csv  benchmark_20260201_114344.csv
